# ch340-rename

.github/workflows/: main.yml
FTProg/: pyproject.toml
FTProg/scripts/: build_universal2.sh
FTProg/src/kimi_ch340/: ch34x.py  cli.py  updater.py
FTProg/src/kimi_ch340.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
